# gTexViewer

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  input.rs  layout.rs  lib.rs  main.rs  renderer.rs  types.rs  ui.rs  utils.rs
src/loading/: async_loader.rs  file_handler.rs  mod.rs
src/texture_pipeline/: hint.rs  mod.rs  registry.rs  source.rs
src/texture_pipeline/parsers/: compressed.rs  ktx2.rs  mod.rs  standard.rs
src/texture_pipeline/sources/: fbx_source.rs  glb_source.rs  image_source.rs  mod.rs  ultra_fast_fbx_parser.rs  zip_source.rs
